--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>App Menu With Lock Screen</title>
     <link rel="stylesheet" href="styles.css">
 
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="https://kit.fontawesome.com/ed64d234be.js" crossorigin="anonymous"></script>
+    <link href='* link to boxicons *' rel='stylesheet'>
+    <script src="* link to fontawsome kit *" crossorigin="anonymous" defer></script>
 
     <script type="module" src="scripts.js" defer></script>
 </head>
