--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <title>App Menu With Lock Screen</title>
     <link rel="stylesheet" href="styles.css">
-
-    <link href='* link to boxicons *' rel='stylesheet'>
-    <script src="* link to fontawsome kit *" crossorigin="anonymous" defer></script>
-
     <script type="module" src="scripts.js" defer></script>
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/ed64d234be.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
     <img class="image" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80" data-background></img>
 
-    <div class="lock-screen screen show" data-lock-screen-page>
+    <div class="lock-screen screen show" data-lock-screen>
         <div class="lock-screen__data" data-lock-screen-data>
             <h1 class="data__time" data-lock-screen-time></h1>
             <div class="data__temp">
@@ -27,7 +26,7 @@
         </button>
     </div>
 
-    <div class="password-screen screen" data-password-screen-page>
+    <div class="password-screen screen" data-password-screen>
         <div class="password__fields" data-password-screen-inputs>
             <div class="password__field current-input"></div>
             <div class="password__field"></div>
@@ -40,7 +39,7 @@
         </div>
     </div>
 
-    <div class="menu-screen screen" data-menu-screen-page>
+    <div class="menu-screen screen" data-menu-screen>
         <div class="menu-screen__data">
             <div data-menu-screen-data>
                 <div>
