--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>App Menu With Lock Screen</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="scripts.js" defer></script>
